tests/NormalTests/paczka1/fuzzy1/96778077.err
Error in line 3: p4Op A462 60,1
Error in line 12: wBJRNVPO A666 50,1
Error in line 24: p4Op A462 95,6
Error in line 26: p4Op S599 67,6
Error in line 18: a3c4m5B6Cp A462 251,7
Error in line 32: L0a5SQKZR A220 33,6
